--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "Matthew Mack <mm@matthewmack.com.au>",
   "dependencies": {
     "async": "~0.2.8",
-    "express": "^3.2.6",
-    "mongodb": "^2.2.24"
+    "express": "^4.14.0",
+    "mongodb": "^2.2.24",
+    "valid-url": "^1.0.9"
   },
   "scripts": {
     "start": "node server.js"
